// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitCommitNodeByline author (compact) 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--no-committer "
>
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="Alice Zhao"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="Alice Zhao"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1990-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1990-01-01"
    >
      about 16 years ago
    </span>
  </Timestamp>
</small>
`;

exports[`GitCommitNodeByline author 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--no-committer "
>
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="Alice Zhao"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="Alice Zhao"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1990-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1990-01-01"
    >
      about 16 years ago
    </span>
  </Timestamp>
</small>
`;

exports[`GitCommitNodeByline different author and committer (compact) 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--has-committer "
>
  <UserAvatar
    className="icon-inline"
    data-tooltip="Alice Zhao (author)"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline"
      data-tooltip="Alice Zhao (author)"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="bYang (committer)"
    user={
      Object {
        "avatarURL": "http://example.com/bob.png",
        "displayName": "Bob Yang",
        "email": "bob@example.com",
        "name": "Bob Yang",
        "user": Object {
          "displayName": "Bob Yang",
          "url": "https://example.com/bobyang",
          "username": "bYang",
        },
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="bYang (committer)"
      src="http://example.com/bob.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  authored
   and
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/bob.png",
        "displayName": "Bob Yang",
        "email": "bob@example.com",
        "name": "Bob Yang",
        "user": Object {
          "displayName": "Bob Yang",
          "url": "https://example.com/bobyang",
          "username": "bYang",
        },
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="Bob Yang <bob@example.com>"
      to="https://example.com/bobyang"
    >
      <AnchorLink
        className="font-weight-bold "
        data-tooltip="Bob Yang <bob@example.com>"
        to="https://example.com/bobyang"
      >
        <a
          className="font-weight-bold "
          data-tooltip="Bob Yang <bob@example.com>"
          href="https://example.com/bobyang"
        >
          bYang
        </a>
      </AnchorLink>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1991-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1991-01-01"
    >
      about 15 years ago
    </span>
  </Timestamp>
</small>
`;

exports[`GitCommitNodeByline different author and committer 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--has-committer "
>
  <UserAvatar
    className="icon-inline"
    data-tooltip="Alice Zhao (author)"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline"
      data-tooltip="Alice Zhao (author)"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="bYang (committer)"
    user={
      Object {
        "avatarURL": "http://example.com/bob.png",
        "displayName": "Bob Yang",
        "email": "bob@example.com",
        "name": "Bob Yang",
        "user": Object {
          "displayName": "Bob Yang",
          "url": "https://example.com/bobyang",
          "username": "bYang",
        },
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="bYang (committer)"
      src="http://example.com/bob.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  authored
   and
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/bob.png",
        "displayName": "Bob Yang",
        "email": "bob@example.com",
        "name": "Bob Yang",
        "user": Object {
          "displayName": "Bob Yang",
          "url": "https://example.com/bobyang",
          "username": "bYang",
        },
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="Bob Yang <bob@example.com>"
      to="https://example.com/bobyang"
    >
      <AnchorLink
        className="font-weight-bold "
        data-tooltip="Bob Yang <bob@example.com>"
        to="https://example.com/bobyang"
      >
        <a
          className="font-weight-bold "
          data-tooltip="Bob Yang <bob@example.com>"
          href="https://example.com/bobyang"
        >
          bYang
        </a>
      </AnchorLink>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1991-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1991-01-01"
    >
      about 15 years ago
    </span>
  </Timestamp>
</small>
`;

exports[`GitCommitNodeByline omit GitHub committer 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--no-committer "
>
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="Alice Zhao"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="Alice Zhao"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1990-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1990-01-01"
    >
      about 16 years ago
    </span>
  </Timestamp>
</small>
`;

exports[`GitCommitNodeByline same author and committer 1`] = `
<small
  className="git-commit-node-byline git-commit-node-byline--no-committer "
>
  <UserAvatar
    className="icon-inline mr-1"
    data-tooltip="Alice Zhao"
    user={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <img
      className="user-avatar icon-inline mr-1"
      data-tooltip="Alice Zhao"
      src="http://example.com/alice.png"
    />
  </UserAvatar>
   
  <PersonLink
    className="font-weight-bold"
    person={
      Object {
        "avatarURL": "http://example.com/alice.png",
        "displayName": "Alice Zhao",
        "email": "alice@example.com",
        "name": "Alice Zhao",
        "user": null,
      }
    }
  >
    <LinkOrSpan
      className="font-weight-bold "
      data-tooltip="alice@example.com"
    >
      <span
        className="font-weight-bold "
        data-tooltip="alice@example.com"
      >
        Alice Zhao
      </span>
    </LinkOrSpan>
  </PersonLink>
   
  committed 
  <Timestamp
    date="1990-01-01"
  >
    <span
      className="timestamp"
      data-tooltip="1990-01-01"
    >
      about 16 years ago
    </span>
  </Timestamp>
</small>
`;
